--- a/newlib/libc/sys/m6809sim/configure.in
+++ b/newlib/libc/sys/m6809sim/configure.in
@@ -1,9 +1,15 @@
-dnl This is the newlib/libc/machine/m68k configure.in file.
+dnl This is the newlib/libc/sys/m6809sim configure.in file.
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
 AC_INIT([newlib],[NEWLIB_VERSION])
 AC_CONFIG_SRCDIR([kill.c])
+
+# Newer automakes demand CCAS and CCASFLAGS.
+: ${CCAS='$(CC)'}
+: ${CCASFLAGS='$(CFLAGS)'}
+AC_SUBST(CCAS)
+AC_SUBST(CCASFLAGS)
 
 dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
 AC_CONFIG_AUX_DIR(../../../..)
