--- a/newlib/configure.in
+++ b/newlib/configure.in
@@ -6,8 +6,9 @@ AC_INIT([newlib],[NEWLIB_VERSION])
 AC_CONFIG_SRCDIR([libc])
 AC_CONFIG_HEADER(newlib.h:newlib.hin)
 
-dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
+dnl Can not be done in NEWLIB_CONFIGURE because that confuses automake. 
 AC_CONFIG_AUX_DIR(..)
+AM_INIT_AUTOMAKE([newlib],[NEWLIB_VERSION])
 
 dnl Support --enable-newlib-io-pos-args
 dnl This option is actually read in libc/configure.in.  It is repeated
